[package]
name = "stocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features=["derive"] }
serde_json = "1"
reqwest = {version="0.11", features=["blocking", "gzip"]}
terminal_size = "0.2"
toml = "0.7.4"